--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,9 +19,9 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<!-- 拦截设置 -->
-	<!-- <servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
-	</servlet-mapping> -->
+	</servlet-mapping>
 	
 </web-app>
